# neo_DFTTest

./: CMakeLists.txt  README.md  main.cpp
include/avisynth/: avisynth.h
include/dualsynth/: ds_format.hpp  ds_frame.hpp  vs_wrapper.hpp
src/: MersenneTwister.h  core.cpp  core.h  core_AVX2.cpp  core_C.cpp  core_SSE2.cpp  core_hwy.cpp  dft_common.h  fftwlite.h  neo_dfttest.hpp  version.rc.in
tests/: CMakeLists.txt  test_core_internal.cpp
